loading image show

--- a/index.html
+++ b/index.html
@@ -24,65 +24,157 @@
       <br>
       <div class="row">
         <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
         </div>
         <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
         </div>
         <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/3.jpeg" alt="">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/3.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
         </div>
         <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/4.jpeg" alt="">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/4.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
         </div>
         <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
         </div>
         <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
-        </div>
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-        </div>
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/3.jpeg" alt="">
-        </div>
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/4.jpeg" alt="">
-        </div>
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
-        </div>
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
-        </div>
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-        </div>
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/3.jpeg" alt="">
-        </div>
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/4.jpeg" alt="">
-        </div>
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
-        </div>
-        <div class="col-md-6">
-          <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-        </div>
-      </div>
     </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/3.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/4.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+    </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/3.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/4.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+    </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/3.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/4.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
+            <span class="au-lazy"></span>
+          </div>
+        </div>
+    </div>
+  </div>
 
     <!-- jQuery -->
     <script src="assets/js/jquery-3.2.1.slim.min.js"></script>
