--- a/index.html
+++ b/index.html
@@ -31,31 +31,26 @@
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
-            <img class="lazy img-fluid" data-src="assets/images/3.jpg" alt="">
-            <span class="au-lazy"></span>
+            <img class="lazy img-fluid" data-src="assets/images/3.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
-            <img class="lazy img-fluid" data-src="assets/images/4.jpg" alt="">
-            <span class="au-lazy"></span>
+            <img class="lazy img-fluid" data-src="assets/images/4.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
     </div>
@@ -63,37 +58,31 @@
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
-            <img class="lazy img-fluid" data-src="assets/images/3.jpg" alt="">
-            <span class="au-lazy"></span>
+            <img class="lazy img-fluid" data-src="assets/images/3.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
-            <img class="lazy img-fluid" data-src="assets/images/4.jpg" alt="">
-            <span class="au-lazy"></span>
+            <img class="lazy img-fluid" data-src="assets/images/4.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
     </div>
@@ -101,37 +90,31 @@
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
-            <img class="lazy img-fluid" data-src="assets/images/3.jpg" alt="">
-            <span class="au-lazy"></span>
+            <img class="lazy img-fluid" data-src="assets/images/3.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
-            <img class="lazy img-fluid" data-src="assets/images/4.jpg" alt="">
-            <span class="au-lazy"></span>
+            <img class="lazy img-fluid" data-src="assets/images/4.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
     </div>
@@ -139,37 +122,63 @@
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
-            <img class="lazy img-fluid" data-src="assets/images/3.jpg" alt="">
-            <span class="au-lazy"></span>
+            <img class="lazy img-fluid" data-src="assets/images/3.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
-            <img class="lazy img-fluid" data-src="assets/images/4.jpg" alt="">
-            <span class="au-lazy"></span>
+            <img class="lazy img-fluid" data-src="assets/images/4.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
-            <span class="au-lazy"></span>
           </div>
         </div>
         <div class="col-md-6">
           <div class="au-inner-col" >
             <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
-            <span class="au-lazy"></span>
+          </div>
+        </div>
+    </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/3.jpeg" alt="">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/4.jpeg" alt="">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/1.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="au-inner-col" >
+            <img class="lazy img-fluid" data-src="assets/images/2.jpg" alt="">
           </div>
         </div>
     </div>
